# ShaderViewer

./: .gitignore  .gitmodules  BUILD.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SETUP_SUMMARY.md  cmake_install.cmake  configure.bat  configure.sh  dev_doc.md
.OldSrc/: Oldcamera.cpp  Oldmodel.h  Oldshader.cpp
cmake/: CommonConfig.cmake  LinuxConfig.cmake  MacOSConfig.cmake  WindowsConfig.cmake
include/: Camera.h  Model.h  ObjModel.h  Shader.h  TestModel.h  TestShader.h  camera.h  shader.h
include/physics/: motion.h
src/: Camera.cpp  Model.cpp  ObjModel.cpp  Oldmain.cpp  Shader.cpp  TestCamera.cpp  TestCamera.h  TestModel.cpp  TestObjModel.cpp  TestObjModel.h  TestShader.cpp  main.cpp  model.cpp
